fixed height on firefox

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -65,7 +65,7 @@
 }
 
 #edito_img {
-    height: 50%;
+    height: 30em;
     margin: auto;
 }
 
